<resources>
    <string name="app_name">Test Medical App</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="login_title">Please enter your email, user name &amp; password.</string>
    <string name="email_address">Email Address</string>
    <string name="user_name">User Name</string>
    <string name="sign_in">Sign In</string>
    <string name="error">Invalid Information</string>
    <string name="main_view_tag">Main View</string>
    <string name="password">Password</string>
    <string name="hyper_link">Forgot Password ?  Registration</string>
    <string name="test_tag_circular_progress">loading…</string>
    <string name="test_list_tag">ListTestTag</string>

</resources>